<resources>
    <string name="app_name">CuteH</string>
    <string name="save_details">Save Details</string>
    <string name="address">Address</string>
    <string name="hotel_details">Hotel Details</string>
    <string name="add_hotel_details">Add/Edit Hotel Details</string>
    <string name="rooms">Rooms</string>
    <string name="staff">Staff</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="rating">Rating</string>
    <string name="feedback">Feedback</string>
    <string name="tables">Tables</string>
    <string name="hotel_id">Hotel Id</string>
    <string name="book_now_option">Book Now Option</string>
    <string name="book_now">Book Now</string>
    <string name="wine_beer_available"><![CDATA[Wine & Beer Available]]></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_data_found">No Data Found !</string>
    <string name="add_hotel">Add Hotel</string>
    <string name="add_institute">Add Institute</string>
    <string name="collage_name">Collage Name</string>
    <string name="collage_id">Collage Id</string>
    <string name="course">Course</string>
    <string name="branch">Branch</string>
    <string name="subject">Subject</string>
    <string name="tution_fee">Tution Fee</string>
    <string name="add_collage_details">Add Collage Details</string>
    <string name="collage_details">Collage Details</string>
    <string name="query_from">Query From</string>
    <string name="collage_img">Collage Building Image</string>
    <string name="hotel_img">Hotel Building Image</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotel">Hotel</string>
    <string name="profile">My Profile</string>
    <string name="institute">Institute</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout_from_app">Do you want to logout ?</string>
    <string name="view_all">View All</string>
    <string name="price">Price</string>
    <string name="you_have_not_add">"You haven't add any hotel"</string>
    <string name="you_can_add">You can add hotel from click on bottom tab hotel</string>
    <string name="edit_details">Edit Details</string>
    <string name="collage_fee">Collage Fee</string>


    <string-array name="feeType">
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Yearly</item>
    </string-array>

</resources>