<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/hotel"
            android:title="@string/dashboard" />


        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/hotel"
            android:iconTint="@color/black"
            android:title="@string/profile" />

        <item
            android:id="@+id/navigation_hotel"
            android:icon="@drawable/hotel"
            android:title="@string/hotel"/>


        <item
            android:id="@+id/navigation_institude"
            android:icon="@drawable/institute"
            android:title="@string/institute" />

        <item
            android:id="@+id/navigation_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>
</menu>
