<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_margin_20dp"
                    android:background="@color/color_f8f8f8"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/lay_width_100dp"
                        android:layout_height="@dimen/lay_height_100dp"
                        app:cardBackgroundColor="@color/color_272F38"
                        app:cardCornerRadius="@dimen/card_radius_50dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:fontFamily="@font/robo_medium"
                            android:gravity="center"
                            android:text="SC"
                            android:textColor="@color/white"
                            android:textSize="40sp" />

                    </androidx.cardview.widget.CardView>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/activity_margin_10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/robo_bold"
                            android:text="Satish Chauhan"
                            android:textColor="@color/dark_blue"
                            android:textSize="@dimen/text_size_20sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/robo_medium"
                            android:text="9999395079"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size_14sp" />


                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin_15dp"
                    android:background="@color/dark_blue"
                    android:padding="@dimen/activity_margin_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/hotel"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16sp" />

                    <TextView
                        android:id="@+id/viewAllHotel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:text="@string/view_all"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16sp" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hotel_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginBottom="@dimen/activity_margin_15dp" />

                <LinearLayout
                    android:id="@+id/noHotel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/activity_margin_24dp"
                    android:visibility="visible"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/activity_margin_24dp">

                    <ImageView
                        android:layout_width="@dimen/activity_margin_50dp"
                        android:layout_height="@dimen/activity_margin_50dp"
                        android:src="@drawable/no_hotel"/>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_14sp"
                        android:fontFamily="@font/robo_bold"
                        android:text="@string/you_have_not_add"
                        android:textColor="@color/dark_blue"
                        android:layout_marginTop="@dimen/activity_margin_12dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_12sp"
                        android:fontFamily="@font/robo_regular"
                        android:text="@string/you_can_add"
                        android:textColor="@color/txt_disabled_color"
                        android:layout_marginTop="@dimen/activity_margin_7dp"/>


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin_15dp"
                    android:background="@color/dark_blue"
                    android:padding="@dimen/activity_margin_10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/institute"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:text="@string/view_all"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_16sp" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/institute_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>
</layout>